[gd_scene load_steps=2 format=3 uid="uid://cfsk1wm2mtv3i"]

[ext_resource type="Script" path="res://src/falling_blocks.gd" id="1_n2ow3"]

[node name="FallingBlocks" type="Node2D"]
script = ExtResource("1_n2ow3")

[node name="Background" type="Node2D" parent="."]

[node name="PlayerOneDropTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="PlayerTwoDropTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="PlayerOneBlocks" type="Node2D" parent="."]

[node name="PlayerTwoBlocks" type="Node2D" parent="."]

[node name="PlayerOneScore" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 320.0
offset_top = 20.0
offset_right = 361.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerTwoScore" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 960.0
offset_top = 20.0
offset_right = 1001.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 72
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="PlayerOneDropTimer" to="." method="_on_player_one_drop_timer_timeout"]
[connection signal="timeout" from="PlayerTwoDropTimer" to="." method="_on_player_two_drop_timer_timeout"]
